# Cargo.toml

# Copyright (C) 2017-2020 The Nitrocli Developers
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "nitrocli"
version = "0.3.4"
edition = "2018"
authors = ["Daniel Mueller <deso@posteo.net>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/d-e-s-o/nitrocli"
repository = "https://github.com/d-e-s-o/nitrocli.git"
readme = "README.md"
categories = ["command-line-utilities", "authentication", "cryptography", "hardware-support"]
keywords = ["nitrokey", "nitrokey-storage", "nitrokey-pro", "cli", "usb"]
description = """
A command line tool for interacting with Nitrokey devices.
"""
exclude = ["ci/*", "rustfmt.toml"]

[badges]
gitlab = { repository = "d-e-s-o/nitrocli", branch = "master" }

[[bin]]
name = "shell-complete"
path = "var/shell-complete.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
incremental = false

[dependencies.anyhow]
version = "1.0"

[dependencies.base32]
version = "0.4.0"

[dependencies.envy]
version = "0.4.1"

[dependencies.directories]
version = "3"

[dependencies.libc]
version = "0.2"

[dependencies.merge]
version = "0.1"

[dependencies.nitrokey]
version = "0.7.1"

[dependencies.progressing]
version = "3.0.2"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.structopt]
version = "0.3.17"
default-features = false

[dependencies.termion]
version = "1.5.5"

[dependencies.toml]
version = "0.5.6"

[dev-dependencies.nitrokey-test]
version = "0.4"

[dev-dependencies.nitrokey-test-state]
version = "0.1"

[dev-dependencies.regex]
version = "1"

[dev-dependencies.tempfile]
version = "3.1"
