# Cargo.toml

# Copyright (C) 2017-2024 The Nitrocli Developers
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "nitrocli"
version = "0.4.1"
edition = "2021"
rust-version = "1.56"
authors = ["Daniel Mueller <deso@posteo.net>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/d-e-s-o/nitrocli"
repository = "https://github.com/d-e-s-o/nitrocli.git"
readme = "README.md"
categories = ["command-line-utilities", "authentication", "cryptography", "hardware-support"]
keywords = ["nitrokey", "nitrokey-storage", "nitrokey-pro", "cli", "usb"]
description = """
A command line tool for interacting with Nitrokey devices.
"""
exclude = ["rustfmt.toml"]
default-run = "nitrocli"

[[bin]]
name = "shell-complete"
path = "var/shell-complete.rs"

[[bin]]
name = "nitrocli-otp-cache"
path = "ext/otp_cache.rs"

[build-dependencies]
anyhow = "1.0"
grev = "0.1.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
incremental = false

[dependencies.anyhow]
version = "1.0"

[dependencies.base32]
version = "0.5.1"

[dependencies.directories]
version = "5"

[dependencies.envy]
version = "0.4.2"

[dependencies.libc]
version = "0.2"

[dependencies.merge]
version = "0.1"

[dependencies.nitrokey]
version = "0.9.0"

[dependencies.progressing]
version = "3.0.2"

[dependencies.serde]
version = "1.0.156"
features = ["derive"]

[dependencies.structopt]
version = "0.3.21"
default-features = false

[dependencies.termion]
version = "1.5.5"

[dependencies.toml]
version = "0.9.3"

[dev-dependencies.nitrokey-test]
version = "0.5"

[dev-dependencies.nitrokey-test-state]
version = "0.1"

[dev-dependencies.regex]
version = "1"

[dev-dependencies.tempfile]
version = "3.1"

[dev-dependencies]
# A set of unused dependencies that we require to force correct minimum versions
# of transitive dependencies, for cases where our dependencies have incorrect
# dependency specifications themselves.
# error: cannot find macro `log` in this scope
_log_unused = { package = "log", version = "0.4.4" }
# error[E0635]: unknown feature `proc_macro_span_shrink`
_proc_macro2_unused = { package = "proc-macro2", version = "1.0.60" }
