# Cargo.toml

#/***************************************************************************
# *   Copyright (C) 2017-2018 Daniel Mueller (deso@posteo.net)              *
# *                                                                         *
# *   This program is free software: you can redistribute it and/or modify  *
# *   it under the terms of the GNU General Public License as published by  *
# *   the Free Software Foundation, either version 3 of the License, or     *
# *   (at your option) any later version.                                   *
# *                                                                         *
# *   This program is distributed in the hope that it will be useful,       *
# *   but WITHOUT ANY WARRANTY; without even the implied warranty of        *
# *   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the         *
# *   GNU General Public License for more details.                          *
# *                                                                         *
# *   You should have received a copy of the GNU General Public License     *
# *   along with this program.  If not, see <http://www.gnu.org/licenses/>. *
# ***************************************************************************/

[package]
name = "nitrocli"
version = "0.1.3"
edition = "2018"
authors = ["Daniel Mueller <deso@posteo.net>"]
license = "GPL-3.0+"
homepage = "https://github.com/d-e-s-o/nitrocli"
repository = "https://github.com/d-e-s-o/nitrocli.git"
readme = "README.md"
categories = ["command-line-utilities", "authentication", "cryptography", "hardware-support"]
keywords = ["hid", "nitrokey", "nitrokey-storage", "usb", "cli"]
description = """
A command line tool for interacting with the Nitrokey Storage device.
"""

[dependencies.nitrokey]
version = "0.2.1"
path = "../nitrokey"


[replace]
"cc:1.0.25" = { path = "../cc" }
"libc:0.2.45" = { path = "../libc" }
"nitrokey-sys:3.4.1" = { path = "../nitrokey-sys" }
"rand:0.4.3" = { path = "../rand" }
