# Cargo.toml

#/***************************************************************************
# *   Copyright (C) 2017-2020 Daniel Mueller (deso@posteo.net)              *
# *                                                                         *
# *   This program is free software: you can redistribute it and/or modify  *
# *   it under the terms of the GNU General Public License as published by  *
# *   the Free Software Foundation, either version 3 of the License, or     *
# *   (at your option) any later version.                                   *
# *                                                                         *
# *   This program is distributed in the hope that it will be useful,       *
# *   but WITHOUT ANY WARRANTY; without even the implied warranty of        *
# *   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the         *
# *   GNU General Public License for more details.                          *
# *                                                                         *
# *   You should have received a copy of the GNU General Public License     *
# *   along with this program.  If not, see <http://www.gnu.org/licenses/>. *
# ***************************************************************************/

[package]
name = "nitrocli"
version = "0.3.1"
edition = "2018"
authors = ["Daniel Mueller <deso@posteo.net>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/d-e-s-o/nitrocli"
repository = "https://github.com/d-e-s-o/nitrocli.git"
readme = "README.md"
categories = ["command-line-utilities", "authentication", "cryptography", "hardware-support"]
keywords = ["nitrokey", "nitrokey-storage", "nitrokey-pro", "cli", "usb"]
description = """
A command line tool for interacting with Nitrokey devices.
"""
exclude = ["ci/*", "rustfmt.toml"]

[badges]
gitlab = { repository = "d-e-s-o/nitrocli", branch = "master" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
incremental = false

[dependencies.argparse]
version = "0.2.2"

[dependencies.base32]
version = "0.4.0"
path = "../base32"

[dependencies.libc]
version = "0.2"

[dependencies.nitrokey]
version = "0.4.0"

[dependencies.structopt]
version = "0.3.7"
default-features = false

[dev-dependencies.nitrokey-test]
version = "0.3.1"

[dev-dependencies.nitrokey-test-state]
version = "0.1"

[dev-dependencies.regex]
version = "1"

[patch.crates-io]
argparse = { path = "../argparse" }
base32 = { path = "../base32" }
cc = { path = "../cc" }
cfg-if = { path = "../cfg-if" }
getrandom = { path = "../getrandom" }
libc = { path = "../libc" }
nitrokey = { path = "../nitrokey" }
nitrokey-sys = { path = "../nitrokey-sys" }
lazy_static = { path = "../lazy-static" }
rand_core = { path = "../rand/rand_core" }
