[package]
name = "nitrokey"
version = "0.3.5"
authors = ["Robin Krahl <robin.krahl@ireas.org>"]
edition = "2018"
homepage = "https://code.ireas.org/nitrokey-rs/"
repository = "https://git.ireas.org/nitrokey-rs/"
documentation = "https://docs.rs/nitrokey"
description = "Bindings to libnitrokey for communication with Nitrokey devices"
keywords = ["nitrokey", "otp"]
categories = ["api-bindings"]
readme = "README.md"
license = "MIT"

[features]
test-pro = []
test-storage = []

[dependencies]
libc = "0.2"
nitrokey-sys = "~3.4"
rand_core = {version = "0.3", default-features = false}
rand_os = {version = "0.1"}

[dev-dependencies]
nitrokey-test = {version = "0.1"}
