# Copyright (C) 2019-2020 Robin Krahl <robin.krahl@ireas.org>
# SPDX-License-Identifier: CC0-1.0

[package]
name = "nitrokey"
version = "0.4.0"
authors = ["Robin Krahl <robin.krahl@ireas.org>"]
edition = "2018"
homepage = "https://code.ireas.org/nitrokey-rs/"
repository = "https://git.ireas.org/nitrokey-rs/"
documentation = "https://docs.rs/nitrokey"
description = "Bindings to libnitrokey for communication with Nitrokey devices"
keywords = ["nitrokey", "otp"]
categories = ["api-bindings"]
readme = "README.md"
license = "MIT"
exclude = [".builds/*"]

[dependencies]
lazy_static = "1.2"
libc = "0.2"
nitrokey-sys = "3.5"
rand_core = {version = "0.5.1", features = ["getrandom"] }

[dev-dependencies]
nitrokey-test = "0.3"
nitrokey-test-state = "0.1"
