[package]
name = "const_fn"
version = "0.0.0"
authors = ["Taiki Endo <te316e89@gmail.com>"]
edition = "2018"
publish = false

[lib]
proc-macro = true
path = "lib.rs"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
syn-mid = { version = "0.4", path = "../..", features = ["clone-impls"] }
